<resources>
    <string name="app_name">AutoStudio</string>
    <string name="car_list_hint">Car Name</string>
    <string name="car_list_details">Car details</string>
    <string name="rca">RCA</string>
    <string name="itp">ITP</string>
    <string name="car_name">Car name</string>
    <string name="total_km">Total KM</string>
    <string name="range">Range</string>
    <string name="to_itp">To ITP</string>
    <string name="average">Average</string>
    <string name="status">S T A T U S</string>
    <string name="my_cars">MY CARS</string>
    <string name="quick_actions">QUICK ACTIONS</string>
    <string name="logo_auto_studio">Logo Auto Studio</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="add_new_car">Add new car</string>
    <string name="latest_events">LATEST EVENTS</string>
    <string name="insert_number_of_km">Insert number of km</string>
    <string name="km_eg">e.g. 43</string>
    <string name="km">km</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="liters">liters</string>
    <string name="done">Done</string>
    <string name="insert_number_of_liters">Insert number of liters</string>
    <string name="upload_document">Upload new document</string>
    <string name="new_car">New Car</string>
    <string name="brand">Brand</string>
    <string name="Renault">Renault</string>
    <string name="model">Model</string>
    <string name="clio">Clio</string>
    <string name="fuel">Fuel</string>
    <string name="km_number">240000</string>
    <string name="km_t">KM</string>
    <string name="color">Color</string>
    <string name="next">Next</string>
    <string name="my_reports">MY REPORTS</string>
    <string name="engine_capacity">Engine capacity</string>
    <string name="cm">cm</string>
    <string name="_1400">1400</string>
    <string name="_95">95</string>
    <string name="avg_consumption">Avg consumption</string>
    <string name="l_100km">L / 100KM</string>
    <string name="rca_expiration_date">RCA expiration date</string>
    <string name="_01_01_2020">01/01/2020</string>
    <string name="itp_expiration_date">ITP expiration date</string>
    <string name="driver_s_name">Driver`s name</string>
    <string name="e_g_OMV">e.g. OMV</string>
    <string name="licence_expiration_date">Licence expiration date</string>
    <string name="preferred_gas_station">Preferred gas station</string>
    <string name="preferred_mechanic">Preferred mechanic</string>
    <string name="e_g_mihai">e.g. Mihai</string>
    <string name="preferred_car">Preferred car</string>
    <string name="e_g_Renault">e.g. Renault</string>
    <string name="what_happened">What happened?</string>
    <string name="date">Pick the date</string>
    <string name="action">Action</string>
    <string name="x_days_ago">x days ago</string>
    <string name="event_name">event_name</string>
    <string name="event_date">event_date</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mechanic">Mechanic</string>
    <string name="cost">Cost</string>
    <string name="your_preferred_mechanic">Your preferred mechanic</string>
    <string name="gas_station">Gas station</string>
    <string name="logout">Logout</string>
    <string name="cars_report">Cars report</string>
    <string name="events_report">Events report</string>
    <string name="event_details">Event details</string>
    <string name="engine_output">Engine output</string>
    <string name="tank_capacity">Tank capacity</string>
    <string name="_44">44</string>
    <string name="car_title">Cars report</string>
    <string name="event_title">Events report</string>
    <string name="report_title">Report title</string>
    <string name="show">Show</string>
    <string name="car">Car</string>
    <string name="expired">expired</string>
    <string name="days">\" d\"</string>
    <string name="welcome">Welcome back,</string>
    <string name="_209k">209K</string>
    <string name="_278">278</string>
    <string name="_200_d">200 d</string>
    <string name="_10_7">10.7</string>
    <string name="gas">Gas</string>
    <string name="petrol">Petrol</string>
    <string-array name="measurements">
        <item> hp </item>
        <item> kW </item>
    </string-array>

    <string-array name="money">
        <item> RON </item>
        <item> EUR </item>
    </string-array>

    <string-array name="events">
        <item>Accident</item>
        <item>ITP</item>
        <item>RCA</item>
        <item>Service visit</item>
    </string-array>

    <string-array name="actions">
        <item>Body</item>
        <item>Chassis</item>
        <item>Drive transmission and steering</item>
        <item>Electrical</item>
        <item>Engine</item>
        <item>Suspension and break</item>
    </string-array>

</resources>