<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".NewTripFragment"
    android:layout_gravity="center">

    <!-- TODO: Update blank fragment layout -->
    <View
        android:layout_width="340dp"
        android:layout_height="387dp"
        android:layout_gravity="center"
        android:background="@drawable/fragment_bg">

    </View>


    <TextView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="end"
        android:text="@string/close"/>

    <LinearLayout
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/text"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:fontFamily="@font/salvatore_regular"
            android:gravity="center"
            android:paddingTop="30dp"
            android:paddingBottom="10dp"
            android:text="@string/insert_number_of_km" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <EditText
                android:layout_width="120dp"
                android:layout_height="43dp"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/salvatore_regular"
                android:hint="@string/km_eg"
                android:textAlignment="center"
                android:inputType="number"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/salvatore_regular"
                android:textSize="18sp"
                android:paddingStart="5dp"
                android:text="@string/km"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:fontFamily="@font/salvatore_regular"
                android:text="@string/car"
                android:textAlignment="center"/>

            <Spinner
                android:id="@+id/refill_car_spinner"
                android:layout_width="200dp"
                android:layout_height="36dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/salvatore_regular"
                android:textColor="@color/white"
                android:inputType="text"
                android:paddingStart="12dp"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry"/>

        </LinearLayout>

        <Button
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:fontFamily="@font/salvatore_bold"
            android:textAlignment="center"
            android:paddingBottom="15dp"
            android:background="@drawable/gradient_button_fill"/>

    </LinearLayout>

</FrameLayout>