<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="396dp"
        android:layout_height="125dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/car_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/carDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:hint="@string/car_list_details"
        android:textSize="18sp"
        android:fontFamily="@font/salvatore_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carName" />

    <TextView
        android:id="@+id/carName"
        android:textSize="24sp"
        android:fontFamily="@font/salvatore_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:hint="@string/car_list_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_RCA"
        android:layout_width="38dp"
        android:layout_height="37dp"
        android:layout_alignBottom="@+id/rectangle_2"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_green"
        android:gravity="center"
        android:lineSpacingExtra="0sp"
        android:text="@string/rca"
        android:textAlignment="center"
        android:textAppearance="@style/carListText"
        android:translationY="-0.2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_ITP" />

    <Button
        android:id="@+id/btn_ITP"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="32dp"

        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_red"
        android:gravity="center"
        android:lineSpacingExtra="0sp"
        android:text="@string/itp"
        android:textAlignment="center"
        android:textAppearance="@style/carListText"
        android:translationY="-0.2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_2" />

</androidx.constraintlayout.widget.ConstraintLayout>