<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_layout"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/salvatore_bold"
            android:paddingStart="20dp"
            android:paddingEnd="40dp"
            android:text="@string/event_name"
            android:textColor="@color/orange"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/days_ago"/>

        <TextView
            android:id="@+id/days_ago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/salvatore_light"
            android:paddingEnd="30dp"
            android:paddingTop="5dp"
            android:text="@string/x_days_ago"
            android:textAlignment="viewEnd"
            android:textColor="@color/grey"
            android:textSize="12dp"
            app:layout_constraintStart_toEndOf="@+id/event_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

    <TextView
        android:id="@+id/event_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_date"
        android:textColor="@color/white"
        android:fontFamily="@font/salvatore_regular"
        android:paddingStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/event_layout"/>
</LinearLayout>