<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ReportFragment">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

    <LinearLayout
        android:id="@+id/query_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_where1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gas"/>
            <EditText
                android:id="@+id/edit_where1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Petrol"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_where2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km_t"/>
            <EditText
                android:id="@+id/edit_where2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/km_eg"/>
        </LinearLayout>

        <Button
            android:id="@+id/query_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show"/>

    </LinearLayout>


    <TextView
        android:id="@+id/report_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_title" />

        <ListView
            android:id="@+id/report_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



</FrameLayout>